--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "mint-ui": "^2.2.9",
+    "vee-validate": "^2.0.0-rc.13",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
