--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "anix": "^0.2.3",
     "axios": "^0.16.2",
     "ppo.xhtml": "^0.1.3",
     "vee-validate": "^2.0.0-rc.13",
