--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "font-awesome": "^4.7.0",
     "ppo.xhtml": "^0.1.3",
     "vee-validate": "^2.0.0-rc.13",
     "vue": "^2.3.3",
