--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "anix": "^0.2.3",
-    "axios": "^0.16.2",
     "font-awesome": "^4.7.0",
     "ppo.xhtml": "^0.1.3",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
